project(main LANGUAGES CXX)

find_package(raylib QUIET)

if(NOT raylib_FOUND)
    find_package(PkgConfig QUIET)
    if(PkgConfig_FOUND)
        pkg_check_modules(RAYLIB QUIET raylib)
    endif()

    find_path(RAYLIB_INCLUDE_DIR NAMES raylib.h HINTS ${RAYLIB_INCLUDE_DIRS})
    find_library(RAYLIB_LIBRARY NAMES raylib HINTS ${RAYLIB_LIBRARY_DIRS})

    if(NOT RAYLIB_INCLUDE_DIR OR NOT RAYLIB_LIBRARY)
        message(FATAL_ERROR
            "raylib nao encontrado. Instala o pacote de desenvolvimento "
            "ou define CMAKE_PREFIX_PATH/raylib_DIR.")
    endif()

    add_library(raylib INTERFACE)
    target_include_directories(raylib INTERFACE ${RAYLIB_INCLUDE_DIR})
    target_link_libraries(raylib INTERFACE ${RAYLIB_LIBRARY})
endif()

function(configure_test_target target_name source_file)
    add_executable(${target_name} ${source_file})
    target_include_directories(${target_name} PRIVATE src)
    target_link_libraries(${target_name} PRIVATE zenengine raylib)

    if(CMAKE_BUILD_TYPE MATCHES Debug)
        if(UNIX)
            target_compile_options(${target_name} PRIVATE -fsanitize=address -fsanitize=undefined -fsanitize=leak -g -D_DEBUG -DVERBOSE)
            target_link_options(${target_name} PRIVATE -fsanitize=address -fsanitize=undefined -fsanitize=leak -g -D_DEBUG)
        endif()
    endif()

    if(WIN32)
        target_link_libraries(${target_name} PRIVATE Winmm.lib)
    endif()

    if(UNIX)
        target_link_libraries(${target_name} PRIVATE m)
    endif()
endfunction()

configure_test_target(test_node src/test_node.cpp)
configure_test_target(test_node2d src/test_node2d.cpp)
configure_test_target(test_sprite src/test_sprite.cpp)
configure_test_target(test_spatialhash src/test_spatialhash.cpp)
configure_test_target(test_characterbody2d src/test_characterbody2d.cpp)
configure_test_target(test_tilemap_character src/test_tilemap_character.cpp)
configure_test_target(test_polymesh src/test_polymesh.cpp)
configure_test_target(test_parallax2d src/test_parallax2d.cpp)
configure_test_target(test_particles2d src/test_particles2d.cpp)
configure_test_target(test_light2d src/test_light2d.cpp)
configure_test_target(test_navigation2d src/test_navigation2d.cpp)
configure_test_target(test_tilemap2d src/test_tilemap2d.cpp)
configure_test_target(test_platformer2d src/test_platformer2d.cpp)
configure_test_target(test_bunny src/test_bunny.cpp)
configure_test_target(test_animation src/test_animation.cpp)
configure_test_target(test_physics2d src/test_physics2d.cpp)

configure_test_target(test_characterbody_shapes src/test_characterbody_shapes.cpp)
configure_test_target(test_segment_collision src/test_segment_collision.cpp)
configure_test_target(test_rigidbody_rotation src/test_rigidbody_rotation.cpp)
configure_test_target(test_rigidbody_bodies  src/test_rigidbody_bodies.cpp)
configure_test_target(test_scene_change      src/test_scene_change.cpp)
configure_test_target(test_path2d            src/test_path2d.cpp)
configure_test_target(test_skeleton2d        src/test_skeleton2d.cpp)
configure_test_target(test_atlas_clip        src/test_atlas_clip.cpp)
configure_test_target(test_motionstreak      src/test_motionstreak.cpp)
configure_test_target(test_tween             src/test_tween.cpp)
configure_test_target(test_drawnode          src/test_drawnode.cpp)
